web-infras/parser/tests/fixtures/babel/es2020/nullish-coalescing-operator/no-paren-nullish-and/output.txt
[SyntaxError]: Nullish coalescing operator(??) requires parens when mixing with logical operators (1,2)
1|a ?? b && c;
 |^
